# rereader

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  reader.rs  state.rs  ui.rs
